<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="3"
                    android:hint="@string/input_name"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:text="@string/url" />

                <EditText
                    android:id="@+id/input_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="3"
                    android:hint="@string/input_url"
                    android:inputType="text" />
            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:text="@string/path" />

                <EditText
                    android:id="@+id/input_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="3"
                    android:hint="@string/input_path"
                    android:inputType="text" />
            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:text="@string/mac" />

                <EditText
                    android:id="@+id/input_mac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="3"
                    android:fontFamily="sans-serif"
                    android:hint="@string/input_mac"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:text="@string/key" />

                <EditText
                    android:id="@+id/input_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="3"
                    android:hint="@string/input_key"
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>